# aithena

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
agents/ask-aithena-agent/: .bumpversion.cfg  .env-sample  .vars-sample  Dockerfile  README.md  build-docker.sh  pyproject.toml
agents/ask-aithena-agent/examples/: ask_aithena_api_example.py
agents/ask-aithena-agent/helm/: .vars-sample  Chart.yaml  README.md  values-sample.yaml
agents/ask-aithena-agent/kubernetes/: ask-aithena-agent-depl.yaml  ask-aithena-agent-service.yaml  deployment_instructions.md
agents/ask-aithena-agent/prompts/: responder.txt
agents/ask-aithena-agent/prompts/reranker/: create_prompt.json  define_topic.json  describe_works.json  one_step_agent.txt
agents/ask-aithena-agent/prompts/semantics/: extract_agent.json  main_agent.txt
agents/ask-aithena-agent/tests/: __init__.py  test_api.py
apps/ai-review-app/: .bumpversion.cfg  .env-sample  .gitignore  .vars-sample  CHANGELOG.md  Dockerfile  README.md  VERSION  build-docker.sh  pyproject.toml
apps/ai-review-app/helm/: .vars-sample  Chart.yaml  README.md  values-sample.yaml
apps/ai-review-app/tests/: test_data_model.py
apps/ask-aithena-app/: .bumpversion.cfg  .dockerignore  .env.local.sample  .vars-sample  Dockerfile  ENV_VAR_VERIFICATION.md  KUBERNETES_DEPLOYMENT_GUIDE.md  LOGGING_SECURITY_UPDATE.md  MIGRATION_SUMMARY.md  PROXY_ARCHITECTURE.md  README.md  README_ENVIRONMENT_SETUP.md  TROUBLESHOOTING.md  VERSION  build-docker.sh  dev-fast.js  next.config.js  next.config.runtime.js  package-lock.json  package.json  pyproject.toml  server.js  setup.sh  tailwind.config.js  tsconfig.json
apps/ask-aithena-app/helm/: .vars-sample  Chart.yaml  README.md  values-sample.yaml
apps/ask-aithena-app/helm/templates/: depl.yaml
apps/ask-aithena-app/kubernetes/: ask-aithena-dashboard-depl.yaml  ask-aithena-dashboard-service.yaml
apps/ask-aithena-app/src/app/: globals.css  layout.tsx  page.tsx
apps/ask-aithena-app/src/components/: Chat.tsx  Header.tsx  MessageItem.tsx  ProcessingStatusCard.tsx  Sidebar.tsx  StatusIndicator.tsx  ThemeToggle.tsx
apps/ask-aithena-app/src/lib/: env.ts  logger.ts  runtime-config.ts  serverEnv.ts  settings.tsx  types.ts  utils.ts
apps/ask-aithena-app/src/services/: api.ts  rabbitmq.ts
apps/ask-aithena-app/src/store/: chatStore.ts
apps/ask-aithena-app/src/types/: global.d.ts  settings.ts
apps/chat-app/: .bumpversion.cfg  .vars-sample  Dockerfile  README.md  build-docker.sh  pyproject.toml
backends/ollama-backend/: .vars-sample  README.md  compose.yaml  pyproject.toml
backends/ollama-backend/docker/: README.md  compose.yaml
backends/ollama-backend/helm/: Chart.yaml  README.md  values-sample.yaml  values-scaling.yaml
backends/ollama-backend/helm-alt/: README.md  delete_statefulsets.sh  deploy_statefulsets.sh  sset.yaml
backends/ollama-backend/tests/: compute_tokens.py  config.py  test_batch_embed.py  test_embed_ llama_index_async.py  test_embed_llama_index.py  test_embed_transformers.py
common/: README.md  pyproject.toml
dbs/pgvector-db/: README.md  pyproject.toml
dbs/pgvector-db/src/aithena/: __init__.py
dbs/postgres-db/: .env-sample  .gitignore  README.md  compose.yml  postgresql.conf  psql.sh  pyproject.toml  schema.sql  schema_constraints.sql
dbs/postgres-db/helm/: Chart.yaml  custom-depl-sample.yaml  values-sample.yaml
dbs/postgres-db/schemas/: openalex_schema_12_30_2024.sql
dbs/postgres-db/scripts/: delete_connections.py  dump_schema.sh  test_duplicate_ids.py
dbs/postgres-db/tests/: conftest.py  test_duplicate_ids.py  test_integrity.py  test_works.py
embeddings/: .bumpversion.cfg  README.md  pyproject.toml
helm/: README.md  (+2 more)
jobs/embed-arxiv/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  pyproject.toml
jobs/embed-arxiv/examples/: cli.py  embed_ollama.py
jobs/embed-arxiv/helm/: Chart.yaml
jobs/embed-arxiv/helm/templates/: pv.yaml  pvc.yaml
jobs/embed-arxiv/tests/: test_arxiv_abstract_ingestion.py  test_cli.py
jobs/get-openalex/: .bumpversion.cfg  .env-sample  .env.sample  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  build-docker.sh  daily-update.sh  docker-compose.yml  example.py  example_fetch.py  notes.md  pyproject.toml  pytest.ini  ruff.toml
jobs/get-openalex/docs/: README.md  api_reference.md  cli_usage.md  database_updates.md  environment_variables.md  technical_details.md
jobs/get-openalex/helm/: Chart.yaml  values-sample.yaml
jobs/get-openalex/helm/templates/: _depl.yaml  cron.yaml  pv.yaml
jobs/get-openalex/kubernetes/: 01-configmap.yaml  03-pvc.yaml  04-deployment.yaml  05-service.yaml  06-cronjob.yaml  README.md
jobs/get-openalex/src/polus/: __init__.py
jobs/get-openalex/tests/rest/: README.md  conftest.py  test_rest_basics.py  test_rest_integration.py  test_rest_paginator.py  test_rest_works.py
mcp/ask-aithena-mcp/: .env.sample  Dockerfile  README.md  pyproject.toml
services/aithena-services/: .bumpversion.cfg  .env-sample  .env.sample  .gitignore  Dockerfile  README.md  build-docker.sh  compose.yml  config_sample.yaml  docker_compose_instructions.md  docker_sample.env  example1.ipynb  l1.py  l2.py  materialized_view.md  pyproject.toml
services/aithena-services/api/: main.py
services/aithena-services/docker/: README.md  build-docker.sh  variables_sample.env
services/aithena-services/docs/: AzureEnv.md  api.md  docker_compose.md  env.md  index.md  memory.md  quickstart.md  structure.md
services/aithena-services/helm/: .vars-sample  Chart.yaml  README.md  aithena-services-secret-sample.yaml  aithena-services-secret-stringdata-sample.yaml  base64_encoder.sh  values-sample.yaml
services/aithena-services/src/aithena_services/: __init__.py  config.py  envvars.py
services/aithena-services/tests/aithena_services/: test_azure_aithena.py  test_fapi.py  test_ollama_aithena.py
services/aithena-services/tests/llama_index/: __init__.py  test_azureopenai_integration.py  test_ollama_integration.py
templates/aithena-template/: README.md  config-template.json  pyproject.toml
(+448 files in other folders)
