[tool.poetry]
name = "aithena"
version = "0.1.0"
description = "Aithena repository for all aithena-related code."
authors = ["Antoine Gerardin <antoine.gerardin@nih.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
