[tool.poetry]
name = "aithena"
version = "0.1.0"
description = "Aithena repository for all aithena-related code."
authors = ["Antoine Gerardin <antoine.gerardin@nih.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
httpx = "^0.27.2"

[tool.poetry.group.test.dependencies]
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
