[tool.poetry]
name = "polus-aithena-common"
version = "0.1.0"
description = ""
authors = ["Antoine Gerardin <antoine.gerardin@nih.gov>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.1"
typer = "^0.12.5"
tqdm = "^4.66.5"
pydantic = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
bump2version = "^1.0.1"
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]