[tool.poetry]
name = "ask-aithena-agent"
version = "0.1.2-dev1"
description = ""
authors = ["Antoine Gerardin <antoine.gerardin@nih.gov>, Camilo Velez <camilo.velezramirez@nih.gov>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
polus-aithena-common = {path= "../../common", develop=true}
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
requests = "^2.32.3"
httpx = "^0.27.2"
qdrant-client = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
bump2version = "^1.0.1"
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
