[tool.poetry]
name = "ollama-backend"
version = "0.1.0"
description = "ollama backend."
authors = ["Antoine Gerardin <antoine.gerardin@nih.gov>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
polus-aithena-common = {path= "../../common", develop=true}
llama-index = "^0.12.0"
llama-index-llms-ollama = "^0.4.0"
llama-index-embeddings-ollama = "^0.4.0"
torch = "^2.5.1"
transformers = "^4.46.3"
einops = "^0.8.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.2"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
