[tool.poetry]
authors = ["Camilo Velez <camilo.velezramirez@nih.gov>"]
description = "get-openalex - Tool for downloading OpenAlex records from their S3 bucket and interacting with OpenAlex REST API"
name = "get-openalex"
packages = [{include = "polus", from = "src"}]
readme = "README.md"
version = "0.1.0-dev1"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

boto3 = "^1.35.63"
polus-aithena-common = {path = "../../common", develop = true}
tqdm = "^4.67.0"
typer = "^0.12.5"
openalex-types = {git = "https://github.com/camilovelezr/openalex-types.git"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
uvicorn = {version = "^0.25.0", extras = ["standard"], optional = true}

httpx = "^0.28.1"
pyalex = "^0.16"

fastapi = {extras = ["standard"], version = "^0.115.11"}
[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.23.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
asyncio_mode = "auto"

[tool.poetry.scripts]
get-openalex = "polus.aithena.jobs.getopenalex.__main__:app"
get-openalex-s3 = "polus.aithena.jobs.getopenalex.s3.__main__:app"
get-openalex-api = "polus.aithena.jobs.getopenalex.api.run:main"
