[project]
name = "ask-aithena-mcp"
version = "0.1.0"
description = "Ask AIthena MCP"
readme = "README.md"
authors = [
    { name = "Camilo Velez", email = "camilo.velezramirez@nih.gov" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
]

[project.scripts]
ask-aithena-mcp = "ask_aithena_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/polus"]

[tool.hatch.build.targets.wheel]
include = ["src/polus"]

[tool.hatch.build.targets.wheel.sources]
"src/polus" = "polus"
