[tool.poetry]
name = "aithena-services"
version = "0.1.3-dev0"
description = ""
authors = ["Camilo Velez <camilo.velez@axleinfo.com>, Antoine Gerardin <antoine.gerardin@nextonicsolutions.com>"]
readme = "README.md"
packages = [{include = "aithena_services", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.7.4"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = ">=0.112.0"}
polus-aithena-common = {path= "../../common", develop=true}
pytest-asyncio = "^0.23.8"
python-dotenv = "^1.0.1"
llama-index = "^0.12.0"
llama-index-embeddings-azure-openai = "^0.3.0"
llama-index-embeddings-ollama = "^0.5.0"
llama-index-llms-openai = "^0.3.19"
llama-index-llms-ollama = "^0.5.2"
llama-index-llms-azure-openai = "^0.3.0"
typing-extensions = "^4.12.2"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
openalex-types = {git="https://github.com/camilovelezr/openalex-types.git"}
llama-index-llms-groq = "^0.3.1"
groq = "^0.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[tool.poetry.group.test.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
#log_file = "pytest.log"
#log_file_level = "INFO"
#log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_file_date_format = "%Y-%m-%d %H:%M:%S"
