[tool.poetry]
name = "aithena-services"
version = "1.0.0-dev0"
description = "Services to interact with pgvector database"
authors = ["Camilo Velez <camilo.velez@axleinfo.com>, Antoine Gerardin <antoine.gerardin@nextonicsolutions.com>"]
readme = "README.md"
packages = [{include = "aithena_services", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = {extras = ["standard"], version = ">=0.112.0"}
polus-aithena-common = {path= "../../common", develop=true}
psycopg = {extras = ["binary"], version = "^3.2.3"}
openalex-types = {git="https://github.com/camilovelezr/openalex-types.git"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[tool.poetry.group.test.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aithena-services = "aithena_services.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
#log_file = "pytest.log"
#log_file_level = "INFO"
#log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_file_date_format = "%Y-%m-%d %H:%M:%S"
