[project]
name = "aithena-services"
version = "1.1.3"
description = "Services to interact with pgvector database"
authors = [{ name = "Camilo Velez", email = "camilo.velez@axleinfo.com"}, {nam="Antoine Gerardin", email = "antoine.gerardin@nextonicsolutions.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.112.0",
    "psycopg[binary]>=3.2.3,<4",
    "uvicorn[standard]>=0.27.1,<0.28",
    "asyncpg>=0.30.0",
    "orjson>=3.10.18",
]

[project.scripts]
aithena-services = "aithena_services.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "pytest-asyncio>=0.23.8,<0.24",
]
test = ["bump2version>=1.0.1,<2"]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["src/aithena_services"]

[tool.hatch.build.targets.wheel]
include = ["src/aithena_services"]

[tool.hatch.build.targets.wheel.sources]
"src/aithena_services" = "aithena_services"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
#log_file = "pytest.log"
#log_file_level = "INFO"
#log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_file_date_format = "%Y-%m-%d %H:%M:%S"
